--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.postprocessing": "3.2.0",
     "com.unity.render-pipelines.high-definition": "12.1.4",
+    "com.unity.render-pipelines.universal": "12.1.4",
     "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.3",
